revert pom changes and ckeck-style suppressions