@@ -50,7 +50,6 @@
     <javaModulesSurefireArgLine>
       --add-opens com.azure.http.netty/com.azure.core.http.netty=ALL-UNNAMED
       --add-opens com.azure.http.netty/com.azure.core.http.netty.implementation=ALL-UNNAMED
-      --add-opens com.azure.core/com.azure.core.util=ALL-UNNAMED
     </javaModulesSurefireArgLine>
     <boring-ssl-classifier></boring-ssl-classifier>
   </properties>
